Fixed ticket title text getting hidden behind the next and prev button
- Also brought the status under the priority

--- a/public/src/application.scss
+++ b/public/src/application.scss
@@ -509,7 +509,7 @@ body h5{
 	.btn{ font-weight:bold; padding:4px 9px; }
 }
                
-.status-pointer, .priority-pointer{
+.priority-pointer{
    @include pointer-title; 
 }
 .request_details{
@@ -535,12 +535,13 @@ body h5{
 		.request-title{
 			$COL_PRI_HIGH: #cc5600;		$COL_PRI_MEDIUM: #0a9458;		$COL_PRI_LOW: #0c8aae;		$COL_PRI_URGENT: #cc0000;			
 			background-color:#f6f6f6; 
-			padding:7px 10px 8px 68px;
+			padding:7px 80px 8px 85px;
 			border-bottom:1px solid #e9e9e9;
 			color:#000000;
 			font-size:13px;
 			position:relative;
-			font-weight:bold;
+			font-weight:bold;                 
+			@include min-height(35px);
 			.subject{ line-height:20px; }
 			.ticket-id{	color:#999999; }
 			.status-pointer, .priority-pointer{
@@ -551,19 +552,15 @@ body h5{
 				padding:9px 8px 0;
 				line-height:0;
 				height:9px;
-				@include min-width(40px);
-			}
-			.status-pointer{
-				float:left;
-				margin:1px 18px 0 -17px;
-				padding-left:18px;
-				position:relative; 
-			}			
-			.priority-pointer{
+				@include min-width(55px);
 				left:-4px;
 				top:8px;
 				position:absolute;
 			}
+			.status-pointer{            
+				top:29px;        
+				@include border-radius(3px);
+			}			                      
 			.low{ background-color: $COL_PRI_LOW; }
 			.low:before{ border-left-color: $COL_PRI_LOW; }
 			.medium{ background-color: $COL_PRI_MEDIUM; }
